@@ -1,5 +1,6 @@
 version x.x.x
  Enhancements
+ * Added --access option for Picasa, Blogger, and YouTube creation tasks.
  * Improved and expanded list fields for youtube, picasa, and blogger.
 
 version 0.9.11
